--- a/src/components/visualizations/Shared/VisualizationFilterHeader.module.scss
+++ b/src/components/visualizations/Shared/VisualizationFilterHeader.module.scss
@@ -69,7 +69,7 @@
       padding: 0.8em;
       color: white;
       background-color: #3a3a3a;
-      z-index: 20;
+      z-index: 1040;
       width: 100%;
       height: 100%;
       &_header {
